css course/css/styles.css
/* ... */
.main-signin__actions--signup{
 	padding: 15px;
 	background-color: lightgray;
}



.main-signin__actions--signup p,.main-signin__actions--signup button{
	display: inline-block;
}






/*********************************Header**************************/

.main-nav{
	width: 100%;
	height: 82px;
	font-family: 'Montserrat', sans-serif;
	background-color: gray;
	border-bottom: 1px solid black;
	position: fixed;
	top: 0;
	z-index: 10;
	

}

.main-nav div{
	display: inline-block;


}

.main-nav__logo{
	display: inline-block;
	width: 200px;
	color: white;
	vertical-align: middle;
}

.main-nav__logo img{
	width: 100%;
}


.main-nav__items{

	width: 70%;
	vertical-align: middle;
	text-align: right;
	overflow: hidden;

}

.main-nav__item{
	color: black;
	padding: 0 15px;
	display: inline-block;
	overflow: hidden;
}

.main-nav__item a, .mobile-nav__item a{
	color: black;
}

.main-nav__item a:hover, .main-nav__item a:active{
	color: white;
	border-bottom: 2px solid white;
}

.main-nav__item--login button, .mobile-nav__item--login button{
	color:white;
	background-color: #00818a;
	padding: 0.5rem 2rem;
	border-radius: 10px;
	font-family: 'Montserrat', sans-serif;
}


.main-nav__item--login button:hover, .main-nav__item--login button:active,
.mobile-nav__item--login button:hover, .mobile-nav__item--login button:active{
	color: white;
	background-color: #3c4245;
	border:none;
	cursor: pointer;
}


/***********************************************************Toggle Button*************************/

.toggle-button {
	display: none;
	width: 40px;
	background-color: transparent;
	cursor: pointer;
	padding-top: 0;
	padding-bottom: 0;
	vertical-align: middle;

}

.toggle-button:focus{
	outline: none;
}

.toggle-button__bar{
	width: 100%;
	height: 4px;
	background-color: white;
	display: block;
	margin: 8px 0;
	border-radius: 10px;
}


/***********************************Mobile Nav*********************************/


.mobile-nav{
	display: none;
	position: fixed;
	z-index: 100;
	top: 0;
	right: 0;
	background-color: white;
	width: 80%;
	height: 100vh;
}

.close-xbutton{
	color: black;
	font-size: 2rem;
	padding: 1rem;
	position: absolute;
	top: 10%;
	left: 90%;
	cursor: pointer;
}


.mobile-nav__items{
	width: 90%;
	height: 100%;
	list-style: none;
	margin: 5% auto;
	padding: 0;
	text-align: center;
}

.mobile-nav__item{
	margin: 1rem 0;
}

.mobile-nav__item a{
	font-size: 1.5rem;
}


/***********************************Main Footer********************************/
.main-footer{
	width: 100%;
	background-color:  #272121;
	box-sizing: border-box;
}


/********************************Main footer contact************************/

.main-footer__lists{

	display: inline-block;
	text-align: center;
	width: 80%;
}



.main-footer__list{
	padding-top: 20px;
	color: white;

	text-align: center;
	width: 19%;

	display: inline-block;
	vertical-align: top;
}

.main-footer__list li{
	padding-top: 5px;
}

.main-footer__list li a{
	color: white;
}

.main-footer__list li a:hover{
	color: #00818a;
}

.main-footer__contact{
	border-right: 2px solid white;
	text-align: center;
}























/****************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************Home Page**************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************/




/********************************************************************************************* Main Section********************************************************************************/






























/**********************************************Background Image**********************************/
.main-section__front{
	position: relative;
	height: 576px;
	background: url("../images/frontimage.jpg") 50%;
	border-bottom: 1px solid black;
	background-size: cover;
	background-position: center, center;
}



.main-section__front--cta{
	color: white;
	position: absolute;
	background-color: #3C4245;
	text-align: center;
	max-width: 25%;
	padding: 20px;
	border-radius: 10px;
	top: 50%;
	left: 50%;
	transform: translate(-50%,-50%);
}

.main-section__front--cta:hover{
	color: black;
	background-color: #00818a;
}

/*******************************************Products*********************************************/

.main-section__products{
	text-align: center;
	background-color: lightgray;
	padding-bottom: 50px;
	border-bottom: 1px solid black;
}

.chooseyourplan{
	padding: 20px;
}
/* ... */

